LAG function doesn't require ORDER BY in OVER clause

JIRA: MDEV-15204

Fixed by adding Lag Function to the list of functions
requiring ORDER BY compulsorily